k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cms
  labels:
    app.kubernetes.io/part-of: cms
